EJBCA 3.4.0
-----------
This is a release with many new interesting features and framework improvements.
Read the changelog for details.

For upgrade instructions, please se UPGRADE.

Because there are binary files in EJBCA_HOME/lib and many massive changes there is no patch file for upgrading
EJBCA 3.3.x to 3.4.0. Use the full package from EJBCA 3.4.0 and follow the upgrade instructions.

Important changes:
In EJBCA 3.4.0 the default ASN.1 string encoding for DNs are now UTF8. In EJBCA 3.3.x and earlier, the default encoding was
PrintableString, unless the character set forced the usage of UTF8 (international characters). 
Now DN components are always encoded as UTF8 (except for components that does not allow UTF8 such as C and SerialNumber).
See UPGRADE for information regarding upgrading from an old CA, and how the behaviour can be configured.

EJBCA 3.3.3
-----------
This is a minor release with some improvement, most notably for LDAP.
Read the changelog for details.

This is a plug-in upgrade from 3.3.x. See UPGRADE for the simple instructions.

EJBCA 3.3.2
-----------
This is a minor release with some bugfixes, most notably for oracle and weblogic.
Read the changelog for details.

This is a plug-in upgrade from 3.3.x. See UPGRADE for the simple instructions.

EJBCA 3.3.1
-----------
This is a minor release with some bugfixes, most notably for Luna HSM.
Read the changelog for details.

This is a plug-in upgrade from 3.3.0. See UPGRADE for the simple instructions.

EJBCA 3.3.0
-----------
This is a major release with new features, improvements and bugfixes.
Read the changelog for details.

This is a plug-in upgrade from 3.2.2. See UPGRADE for the simple instructions.

EJBCA 3.2.2
-----------
This is a minor release with minor improvements and some bugfixes, mostly for MS-SQL.
Read the changelog for details.

This is a plug-in upgrade from 3.2.1. See UPGRADE for the simple instructions.

EJBCA 3.2.1
-----------