@@ -15,6 +15,9 @@
   <field-name>expireTime</field-name>
 </cmp-field>
 <cmp-field>
+  <field-name>updateTime</field-name>
+</cmp-field>
+<cmp-field>
   <field-name>data</field-name>
   <jdbc-type>LONGVARCHAR</jdbc-type>
   <sql-type>IMAGE</sql-type>
