@@ -126,7 +126,7 @@ import org.ejbca.util.cert.SubjectDirAttrExtension;
  * X509CA is a implementation of a CA and holds data specific for Certificate and CRL generation 
  * according to the X509 standard. 
  *
- * @version $Id: X509CA.java,v 1.48 2007-01-09 16:47:19 herrvendil Exp $
+ * @version $Id: X509CA.java,v 1.49 2007-01-12 09:43:07 anatom Exp $
  */
 public class X509CA extends CA implements Serializable {
 
@@ -178,14 +178,14 @@ public class X509CA extends CA implements Serializable {
     
    /** Constructor used when retrieving existing X509CA from database. 
  * @throws IllegalKeyStoreException */
-    public X509CA(HashMap data, int caId, String subjectDN, String name, int status) throws IllegalKeyStoreException{
+    public X509CA(HashMap data, int caId, String subjectDN, String name, int status, Date updateTime) throws IllegalKeyStoreException{
     	super(data);
     	ArrayList externalcaserviceinfos = new ArrayList();
     	Iterator iter = getExternalCAServiceTypes().iterator(); 	
     	while(iter.hasNext()){
     		externalcaserviceinfos.add(this.getExtendedCAServiceInfo(((Integer) iter.next()).intValue()));  	
     	}
-        CAInfo info = new X509CAInfo(subjectDN, name, status, getSubjectAltName() ,getCertificateProfileId(),  
+        CAInfo info = new X509CAInfo(subjectDN, name, status, updateTime, getSubjectAltName() ,getCertificateProfileId(),  
         		  getValidity(), getExpireTime(), getCAType(), getSignedBy(), getCertificateChain(),
         		  getCAToken(caId).getCATokenInfo(), getDescription(), getRevokationReason(), getRevokationDate(), getPolicyId(), getCRLPeriod(), getCRLIssueInterval(), getCRLOverlapTime(), getCRLPublishers(),
         		  getUseAuthorityKeyIdentifier(), getAuthorityKeyIdentifierCritical(),
