@@ -1,0 +1,4 @@
+
+# Format of column changed, no information was stored here earlier though
+alter table CAData add bigint NOT NULL DEFAULT 0;
+
